<resources>
    <string name="app_name">TheSandyNews</string>
    <string name="news">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qr_amp_barcode_scanner"><![CDATA[QR & Barcode Scanner]]></string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="todo">TODO</string>
    <string name="result">Result:</string>
    <string name="pick_an_image_from_gallery">Pick an Image from Gallery</string>
    <string name="scan">Scan</string>
</resources>